Incorporated new challenge logo in main page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="wrapper">
     <div id="content" class="clearfix">
       <ul id="navigation">
-        <h3><li><a href="/"><img src="images/logo.jpg" width="207" height="157" alt="LinkedUp Challenge" /></a></li>
+        <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
         <li><a href="#first">The first competition</a></li>
         <li><a href="#why">Why participate?</a></li>
