--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul id="navigation">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
-        <li><a href="#first">The first competition</a></li>
+        <li><a href="#first">Join the first competition</a></li>
         <li><a href="#why">Why participate?</a></li>
         <li><a href="#how">How to participate?</a></li>
         <li><a href="#next">What happens next?</a></li>
@@ -53,10 +53,10 @@
           <div class="titletext">
 		    <h1>The LinkedUp Challenge</h1>
 			
-            <p><h2><em>A series of three competitions promoting the innovative use of linked and open educational web data in an educational context.</em></h3>
-            <a href="http://www.europa.eu/"><img src="images/europa_logo.jpg" style="padding:25px" align="right"></a>
-            <a href="http://www.ec.europa.eu/research/fp7"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"></a>
-            <a href="http://linkedup-project.eu"><img src="images/project_logo.png" style="padding:25px;" align="right"></a>
+            <p><h2><em>A series of three competitions promoting the innovative use of linked and open data in an educational context.</em></h3>
+            <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"></a>
+            <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"></a>
+            <a href="http://linkedup-project.eu" target="_blank"><img src="images/project_logo.png" style="padding:25px;" align="right"></a>
             <p></p>
 	
             </p>
@@ -66,54 +66,56 @@
         </div><!-- .block -->
 	
         <div id="what" name="what" class="block">
-            <p><h3>There is a wealth of material on the internet that is useful in our professional and private lives, ranging from lecture slides, tutorials, online courses and MOOCs to Wikipedia articles and YouTube videos. But how could one find and connect the resources that learners need?</p></h3>
+            <p><h3>There is a wealth of useful and inspirational material on the internet that can be used in education, ranging from lecture slides, tutorials, and online courses to Wikipedia articles and YouTube videos. But how could one find and connect the resources that learners need?</h3></p>
               
-			<p><h3>The LinkedUp challenge is all about finding ways to link and mash-up educational and cross-domain resources to provide novel services for open and distance education. In particular, yet not exclusively, we are interested in the use of Linked Data as a method that allows companies, universities, governments and other organization to share their material and link it to other relevant material.</p></h3>
+			<p><h3>The LinkedUp challenge is all about finding ways to link and mash up educational and cross-domain linked and open data to provide novel applications and services for open and distance education.</h3></p>
 	
-			<p><h3>To support the challenge, the LinkedUp support action has been collecting and cataloguing data explicitly related to education, ranging from open educational resources to course programmes and educational facilities. The <a href="http://datahub.io/group/linked-education" target="_blank">catalogue</a> is available, as well as through a <a href="http://linkedu.eu/catalogue/" target="_blank">data endpoint</a>, associated with search and exploration services. Through this data repository, as well as upcoming development support facilities including code samples, use case documentation, code clinics and developer’s forum, the LinkedUp support action will provide a complete environment to ensure great, highly exploitable applications are generated from putting together the best developers with all the data they need to create new educational services.</p></h3>
-              
-			<h3><p>In total, there will be three competitions, and the first one will be launched on 11 March 2013. You can join in at each separate competition; participants to earlier competitions will be able to benefit from support and feedback from the LinkedUp team.</p>
-             <ul>
-				<li><em>First competition:</em> Veni (March 2013 - October 2013): Innovative scenarios, prototypes and tools for analysing and integrating open educational Web data</li>
+			<p><h3>There will be three consecutive competitions, and the first one will be launched on 11 March 2013. You can join in at each separate competition; participants to earlier competitions will be able to benefit from support and feedback from the LinkedUp team.</h3></p>
+			<br />
+            <ul><h3>
+				<li><em>First competition:</em> Veni (March 2013 - October 2013): Innovative prototypes and tools for analysing and integrating open educational Web data</li>
 				<li><em>Second competition:</em> Vidi (November 2013 - April 2014): Challenging and innovative, mature data-driven applications</li>
 				<li><em>Third competition:</em> Vici (May 2014 - November 2014): Robust applications for large-scale educational use-cases, offered and provided by LinkedUp</li>
-			 </ul>	
-             <br/>
-			 <br/></h3>
+			 </h3></ul>	
+
+			 <p><h3>To support the challenge, the LinkedUp support action has been collecting and cataloguing data explicitly related to education, ranging from open educational resources to course programmes and educational facilities. The <a href="http://datahub.io/group/linked-education" target="_blank">catalogue</a> is available now but will be further refined and extended. There is also a <a href="http://linkedu.eu/catalogue/" target="_blank">data endpoint</a>, associated with search and exploration services around this data.</p></h3>
+	
+			<p><h3>These data services are part of the complete environment that the LinkedUp prject will provide, including code samples, use case documentation, code clinics and developers' forum.</p></h3>
+	
           </div><!-- .block -->
 
 		  <div id="first" name="first" class="block">
-              <h1>First Competition: Veni</h1>
-			  <br/><br/>        
-              <p><h3>The goal of the first LinkedUp competition is to gather innovative and robust scenarios for tools that analyse and/or integrate large scale, open Web data for educational purposes. Submissions should demonstrate and promote the benefit of open Web data technologies for education in the widest sense of the word.</h3></p>
-			  <p><h3>The LinkedUp Veni Competition will be open for any kind of (end-user) application that analyses and/or makes use of Linked and/or Open Data for any kind of online learning.</h3></p>
-			  <p><h3>Looking for inspiration? We collected a few sample, real-world use cases from the e-learning, industrial and edutainment fields. <a href="#usecases">Check these out!</a></h3></p>
+              <h1>Join the First Competition: Veni</h1>
+			  <br/>
+              <p><h3>The goal of the first LinkedUp competition is to gather innovative and robust prototypes for tools that analyse and/or integrate large scale, open web data for educational purposes. Submissions should demonstrate and promote the benefit of open web data technologies for education in the widest sense of the word.</h3></p>
+			  <p><h3>The LinkedUp Veni Competition will be open for any kind of end-user application that analyses and/or makes use of Linked and/or Open Data for any kind of online learning.</h3></p>
+			  <p><h3>Looking for inspiration? We collected a few sample, real-world use cases from the e-learning, industrial and edutainment fields. <a href="usecases.html">Check these out!</a></h3></p>
 
-			  <h3><p>Important dates:</p>
+			  <h3><p>Important dates for the Veni Competition:
 			  <ul>
 			  <li>11 March 2013: Launch of the Challenge</li>
-			  <li>13 May 2013: Release of the comprehensive LinkedUp dataset</li>
+			  <li>13 May 2013: Final release of the comprehensive LinkedUp dataset</li>
 			  <li>27 June 2013: Submission deadline</li>
 			  <li>1 September 2013: Notifications and nominations</li>
-			  <li>17 September 2013: Presentations and award ceremony at the Open Knowledge Festival</li>
-			  </ul></h3>
+			  <li>17 September 2013: Presentations and award ceremony</li>
+			  </ul></p></h3>
           </div>
 
           <div id="why" name="why" class="block">
               <h1>Why participate?</h1>
-			  <br/><br/>        
-              <p><h3>There are many reasons for you to join and participate in the competition. First of all there are cash prizes. Out of a total prize budget of 39.500 EUR the Veni Competition offers:<br />
+			  <br/>
+              <p><h3>First of all, there are cash prizes. Out of a total prize budget of 39.500 EUR the Veni Competition offers:<br />
 			  <br />
 			  <ul>
 			  <li>1st prize: 2.000 EUR</li>
 			  <li>2nd and 3rd prize: 1.000 EUR each</li>
 			  <li>5 Runner-up prizes with a total value of 1.000 EUR</li>
 			  </ul></h3></p>
-			  <p><h3>More importantly, there are the opportunities for networking and showcasing that the competition offers:
+			  <p><h3>More importantly, there are the opportunities for networking and promoting your application to a wide audience:
 			  <br />
 			  <br />
 			  <ul>
-			  <li>Showcase your ideas and solutions to the key community of researchers and practitioners in the field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at the OKF Festival.</li>
+			  <li>Showcase your ideas and solutions to the key community of researchers and practitioners in the ecucational field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at the OKF Festival.</li>
 			  <li>Establish contact with a network of professional major organisations. Draw attention to your services, products, company or research activities with your submission by participating in the growing LinkedUp community.</li>
 			  <li>Deploy and evaluate your applications in real-world settings. LinkedUp offers a set of challenging use cases from real world large organizations, and stakeholders from e-learning (Commonwealth of Learning), publishing (Elsevier) and edutainment (Jake Berger, BBC). Your submission could provide them with solutions that they need.</li>
 			  <li>Work with a large amount of linked datasets, collected and provided by LinkedUp. The LinkedUp dataset provides a convenient starting point for exploring well-described educational and non-educational data on the Web.</li>
@@ -125,15 +127,13 @@
 
         <div id="how" name="how" class="block">
               <h1>How to participate</h1>
-			  <br/>
               <br/>
               <p><h3><ul>
-			    <li>Of course you need to have a demo, prototype or application that analyses and/or makes use of linked data for any kind of online learning.</li>
-				<li>You are allowed to make use of your own data and/or linked data that is not included in the LinkedUp dataset</li>
-				<li>The demo should be available for the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
-				<li>Write an abstract of 200 words that will be published on the LinkedUp website.</li>
-				<li>Fill out the submission paper template: motivation, system description and (self-)evaluation, plus a link to your system. (draft submission template: https://docs.google.com/document/d/1OVXK6unxpZo4AZaiGO_-7WSEDDwyJk_p_gRqc6Y_Dk4/edit?usp=sharing )</li>
-				<li>Submit your paper through the EasyChair system.</li>
+			    <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
+				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data respository and/or data from other sources.</li>
+				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
+				<li>Write an abstract of 200 words describing your application and its goals. This abstract that will be published on the LinkedUp website.</li>
+				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published 13 May 2013.</li>
 			  </ul></h3></p>
               <br/><br/>
 		</div>
@@ -142,9 +142,9 @@
         <div id="next" name="next" class="block">
 			<h1>Review process and selection of winners</h1>
 			<br/><br/>
-            <p><h3>After the submission deadline, a quick check will filter out any incomplete or irrelevant submissions. All eligible submissions will be evaluated and rated by the review committee.</h3></p>
+            <p><h3>After the submission deadline, all eligible submissions will be evaluated and rated by the review committee.</h3></p>
             <p><h3>Review and rating criteria include data quality, innovative aspects, performance, usability, intended audience and (the lack of) privacy issues.</h3></p>
-            <p><h3>During the presentation and award event, the audience will vote the winners from the submissions that received the highest review ratings.</h3></p>
+            <p><h3>During the presentation and award event in September, the audience will vote the winners from the submissions that received the highest review ratings.</h3></p>
 		</div>
 		
         <div id="judges" name="judges" class="block">
@@ -157,7 +157,7 @@
 	            <li>Dan Brickley - Google, UK</li>
 	            <li>Philippe Cudre Maroux - EPFL, Switzerland</li>
               </ul></h3>
-			  <p><h3>The full review committee will be announced in due course.</h3></p>	
+			  <p><h3>These executives will be supported by other committee members, who will be announced in due course.</h3></p>	
               <br/><br/>
 			</div>
 
@@ -165,7 +165,7 @@
 		    <h1>Get in touch!</h1>
 		    </br></br>
 		    <p>
-		    <p><h3>Stay tuned for the full launch of the challenge in March. If you have any questions or comments we would love to hear from you:</p>
+		    <p><h3>Do you have any questions or comments? Do you know great open data sets that are relevant for education? We would love to hear from you!"</p>
 			<ul>
 			  <li>Follow us on <a href="http://twitter.com/linkedupproject" target="_blank">@linkedupproject</a></li>
 			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailinglist</a></li>
@@ -176,7 +176,7 @@
           </div>
 
 		  <div id="background" name="background" class="block">
-               <h1>About Linking open educational web data</h1>
+               <h1>About linking open educational data</h1>
                <br/><br/>		
                <p><h3>Linked data principles and techniques are used successfully to expose and link datasets from a large variety of resources, covering government, media, life sciences and user-generated content. The cloud of linked data is rapidly growing. Still, there is much more potential for users and society to benefit from widespread access to openly available data.</h3></p>
 			   <p><h3>Education is an area that is expected to benefit highly from linked data approaches. Many institutes offer Open Educational Resources (OER) online. Famous examples include <a href="http://ocw.mit.edu/index.htm" target="_blank">MIT Open CourseWare</a> and the UK Open University's <a href="http://www.open.edu/openlearn/" target="_blank">OpenLearn</a>. Linked data makes it possible to connect the various offerings with one another and with general-purpose resources such as Wikipedia.</h3></p>
