Added images of challenge judges

--- a/index.html
+++ b/index.html
@@ -150,13 +150,30 @@
         <div id="judges" name="judges" class="block">
               <h1>Who is in the review committee?</h1>
 			  <br/><br/>
-			  <h3><p>The following committee executives will judge the submissions:</p>
-			  <ul>
-                <li>Sören Auer - University of Leipzig, Germany</li>
-	            <li>Balaji Venkataraman - Commonwealth of Learning, Canada</li>
-	            <li>Dan Brickley - Google, UK</li>
-	            <li>Philippe Cudre Maroux - EPFL, Switzerland</li>
-              </ul></h3>
+			  <h3><p>The following committee executives will evaluate the submissions:</p>
+			  <table border="0">
+			    <tr>
+				  <td style="text-align:center;align:center">
+				    <img src="images/SoerenAuer.jpg" /><br />
+					Sören Auer - University of Leipzig, Germany
+				  </td>
+				  <td style="text-align:center;align:center">
+				    <img src="images/BalajiVenkataraman.jpg" /><br />
+				    Balaji Venkataraman - Commonwealth of Learning, Canada
+				  </td>
+				</tr>
+			    <tr>
+				  <td style="text-align:center;align:center">
+				    <img src="images/DanBrickley.jpg" /><br />
+				    Dan Brickley - Google, United Kingdom
+				  </td>
+				  <td style="text-align:center;align:center">
+				    <img src="images/PhilippeCudre-Mauroux.jpg" /><br />
+					Philippe Cudre-Mauroux - EPFL, Switzerland
+				  </td>
+				</tr>
+			  </table>
+			  </h3>
 			  <p><h3>These executives will be supported by other committee members, who will be announced in due course.</h3></p>	
               <br/><br/>
 			</div>
