Some typo fixes and made text a bit more appealing.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       <ul id="navigation">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
-        <li><a href="#first">Join the first competition</a></li>
+        <li><a href="#first">Join now!</a></li>
         <li><a href="#why">Why participate?</a></li>
         <li><a href="#how">How to participate?</a></li>
         <li><a href="#next">What happens next?</a></li>
         <li><a href="#contact">Get in touch!</a></li>
         <li><a href="#background">What is open educational data?</a></li>
-		<li><a href="usecases.html">Use cases</a></li></h3>
+		<li><a href="usecases.html">Example use cases</a></li></h3>
       </ul>
       
       <div class="content-shifter">
@@ -70,7 +70,7 @@
               
 			<p><h3>The LinkedUp challenge is all about finding ways to link and mash up educational and cross-domain linked and open data to provide novel applications and services for open and distance education.</h3></p>
 	
-			<p><h3>There will be three consecutive competitions, and the first one will be launched on 11 March 2013. You can join in at each separate competition; participants to earlier competitions will be able to benefit from support and feedback from the LinkedUp team.</h3></p>
+			<p><h3>There will be three consecutive competitions, and the first one is open now! You can join in at each separate competition; participants to earlier competitions will be able to benefit from support and feedback from the LinkedUp team.</h3></p>
 			<br />
             <ul><h3>
 				<li><em>First competition:</em> Veni (March 2013 - October 2013): Innovative prototypes and tools for analysing and integrating open educational Web data</li>
@@ -80,7 +80,7 @@
 
 			 <p><h3>To support the challenge, the LinkedUp support action has been collecting and cataloguing data explicitly related to education, ranging from open educational resources to course programmes and educational facilities. The <a href="http://datahub.io/group/linked-education" target="_blank">catalogue</a> is available now but will be further refined and extended. There is also a <a href="http://linkedu.eu/catalogue/" target="_blank">data endpoint</a>, associated with search and exploration services around this data.</p></h3>
 	
-			<p><h3>These data services are part of the complete environment that the LinkedUp prject will provide, including code samples, use case documentation, code clinics and developers' forum.</p></h3>
+			<p><h3>These data services are part of the complete environment that the LinkedUp project will provide, including code samples, use case documentation, code clinics and developers' forum.</p></h3>
 	
           </div><!-- .block -->
 
@@ -99,6 +99,7 @@
 			  <li>1 September 2013: Notifications and nominations</li>
 			  <li>17 September 2013: Presentations and award ceremony</li>
 			  </ul></p></h3>
+	        <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
           </div>
 
           <div id="why" name="why" class="block">
@@ -115,13 +116,14 @@
 			  <br />
 			  <br />
 			  <ul>
-			  <li>Showcase your ideas and solutions to the key community of researchers and practitioners in the ecucational field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at the OKF Festival.</li>
+			  <li>Showcase your ideas and solutions to the key community of researchers and practitioners in the educational field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at the OKF Festival.</li>
 			  <li>Establish contact with a network of professional major organisations. Draw attention to your services, products, company or research activities with your submission by participating in the growing LinkedUp community.</li>
 			  <li>Deploy and evaluate your applications in real-world settings. LinkedUp offers a set of challenging use cases from real world large organizations, and stakeholders from e-learning (Commonwealth of Learning), publishing (Elsevier) and edutainment (Jake Berger, BBC). Your submission could provide them with solutions that they need.</li>
 			  <li>Work with a large amount of linked datasets, collected and provided by LinkedUp. The LinkedUp dataset provides a convenient starting point for exploring well-described educational and non-educational data on the Web.</li>
 			  <li>Benefit from dedicated support and guidance offered by LinkedUp. We have a team of people who are eager to support you. We will provide 'cooking recipes' and other kinds of documentation. Contact us with specific questions. You can even submit your code for technical support.</li>
 			  <li>Use the LinkedUp dataset for your experiments and publications. Apart from your submission to the competition, we encourage you to continue the work and to submit it to conferences and other events.</li>
             </ul>
+	        <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
         </div>
 
 
@@ -130,7 +132,7 @@
               <br/>
               <p><h3><ul>
 			    <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
-				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data respository and/or data from other sources.</li>
+				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
 				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
 				<li>Write an abstract of 200 words describing your application and its goals. This abstract that will be published on the LinkedUp website.</li>
 				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published 13 May 2013.</li>
@@ -182,10 +184,10 @@
 		    <h1>Get in touch!</h1>
 		    </br></br>
 		    <p>
-		    <p><h3>Do you have any questions or comments? Do you know great open data sets that are relevant for education? We would love to hear from you!"</p>
+		    <p><h3>Do you have any questions or comments? Do you know great open data sets that are relevant for education? We would love to hear from you!</p>
 			<ul>
 			  <li>Follow us on <a href="http://twitter.com/linkedupproject" target="_blank">@linkedupproject</a></li>
-			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailinglist</a></li>
+			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailing nlist</a></li>
 			  <li><a href="http://linkedup-project.eu/contact/" target="_blank">Contact us directly</a></li>
 			</ul></h3>
 			<br/><br/>
