Added support section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="#first">Join now!</a></li>
         <li><a href="#why">Why participate?</a></li>
         <li><a href="#how">How to participate?</a></li>
+        <li><a href="#support">Challenge support</a></li>
         <li><a href="#next">What happens next?</a></li>
         <li><a href="#contact">Get in touch!</a></li>
         <li><a href="#background">What is open educational data?</a></li>
@@ -133,13 +134,28 @@
               <p><h3><ul>
 			    <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
 				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
-				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
-				<li>Write an abstract of 200 words describing your application and its goals. This abstract that will be published on the LinkedUp website.</li>
 				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published 13 May 2013.</li>
+				<li>Write an abstract of about 200 words describing your application and its goals. This abstract that will be published on the LinkedUp website.</li>
+				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
 			  </ul></h3></p>
               <br/><br/>
 		</div>
 
+        <div id="support" name="support" class="block">
+              <h1>Data and development support</h1>
+              <br/>
+			  <p><h3>To support the challenge, the LinkedUp support action is collecting and cataloguing data explicitly related to education, as well as related data that may be relevant. This includes data about open educational resources, course programmes and educational facilities. Related data may included data about useful Web media, user-generated content, Web lectures or academic publications. The results from the intial efforts focus on explicitly educational data. The <a href="http://datahub.io/group/linked-education" target="_blank">Linked Education catalogue</a> is available, as well as through a <a href="http://data.linkededucation.org/linkedup/catalog" target="_blank">data endpoint</a>, where a SPARQL endpoint provides access to VoID descriptions of currently included datasets. We are working on additional search and exploration services which will be provided.</h3></p>
+			  
+			  <p><h3>Through the Linked Education data repository, as well as upcoming development support facilities including code samples, use case documentation, code clinics and a developers forum, the LinkedUp support action will provide a complete environment to ensure great, highly exploitable applications are generated from putting together the best developers with all the data they need to create new educational services.</h3></p>
+
+              <p><h3>The data and support infrastructure are a continuous work in progress and updates are provided as we go. We are in particular planning substantial updates/releases according to the following schedule.
+			  <ul>
+			    <li><strong>end-March 2013:</strong> Expanded Linked Education catalogue with significant amount of OER metadata exposed as linked data. Launch of the “LinkedUp DevTalk” blog/forum.</li>
+				<li><strong>end-April 2013:</strong> Release of the Linked Education tagset for cataloguing education-related datasets, and inclusion of datasets useful for student modelling. Opening of the code clinic environment.</li>
+				<li><strong>end-May 2013:</strong> Release of advanced interfaces to the catalogue, including search and navigation facilities, and inclusion of datasets regarding statistics in education, courses and academic programmes.</li>
+			  </ul></h3></p>
+              <br/><br/>
+		</div>
 
         <div id="next" name="next" class="block">
 			<h1>Review process and selection of winners</h1>
