Updated use cases and processed Stefan's comments.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#support">Data and support</a></li>
         <li><a href="#next">Review Process</a></li>
         <li><a href="#contact">Get in touch!</a></li>
-        <li><a href="#background">What is open educational data?</a></li>
+        <li><a href="#background">Background</a></li>
 		<li><a href="usecases.html">Use cases</a></li></h3>
       </ul>
       
@@ -158,7 +158,7 @@
         <div id="support" name="support" class="block">
               <h1>Data and development support</h1>
               <br/>
-			  <p><h3>To support the challenge, the LinkedUp support action is collecting and cataloguing data explicitly related to education, as well as related data that may be relevant. This includes data about open educational resources, course programmes and educational facilities. Related data may included data about useful Web media, user-generated content, Web lectures or academic publications. The results from the intial efforts focus on explicitly educational data. The <a href="http://datahub.io/group/linked-education" target="_blank">Linked Education catalogue</a> is available, as well as through a <a href="http://data.linkededucation.org/linkedup/catalog" target="_blank">data endpoint</a>, where a SPARQL endpoint provides access to VoID descriptions of currently included datasets. We are working on additional search and exploration services which will be provided.</h3></p>
+			  <p><h3>To support the challenge, the LinkedUp support action is collecting and cataloguing data explicitly related to education, as well as related data that may be relevant. This includes data about open educational resources, course programmes and educational facilities. Related data may included data about useful Web media, user-generated content, Web lectures or academic publications. The results from the intial efforts focus on explicitly educational data. The <a href="http://datahub.io/group/linked-education" target="_blank">Linked Education catalogue</a> is available, as well as through a <a href="http://data.linkededucation.org/linkedup/catalog/" target="_blank">data endpoint</a>, where a SPARQL endpoint provides access to VoID descriptions of currently included datasets. We are working on additional search and exploration services which will be provided.</h3></p>
 			  <br />
 			  <p align="center"><a class="btn btn-large btn-success" href="http://data.linkededucation.org/linkedup/catalog/browse/">Browse The Data</a></p>
 			  <br />
@@ -184,7 +184,7 @@
         <div id="judges" name="judges" class="block">
               <h1>Who is in the review committee?</h1>
 			  <br/><br/>
-			  <h3><p>The following committee executives will evaluate the submissions:</p>
+			  <h3><p>The following key people will be leading the evaluation committee:</p>
 			  <table border="0">
 			    <tr>
 				  <td style="text-align:center;align:center">
@@ -227,8 +227,9 @@
           </div>
 
 		  <div id="background" name="background" class="block">
-               <h1>What is open educational data?</h1>
-               <br/><br/>		
+               <h1>Open data applied to education</h1>
+               <br/><br/>
+			   <p><h3>LinkedUp seeks to explore and exploit the wealth of web data for education. This includes data with an explicit educational purpose, as well as other data and information that may not have an explicit educational remit, but can usefully be applied to an educational context.</h3></p>
                <p><h3>Linked data principles and techniques are used successfully to expose and link datasets from a large variety of resources, covering government, media, life sciences and user-generated content. The cloud of linked data is rapidly growing. Still, there is much more potential for users and society to benefit from widespread access to openly available data.</h3></p>
 			   <p><h3>Education is an area that is expected to benefit highly from linked data approaches. Many institutes offer Open Educational Resources (OER) online. Famous examples include <a href="http://ocw.mit.edu/index.htm" target="_blank">MIT Open CourseWare</a> and the UK Open University's <a href="http://www.open.edu/openlearn/" target="_blank">OpenLearn</a>. Linked data makes it possible to connect the various offerings with one another and with general-purpose resources such as Wikipedia.</h3></p>
 			   <p><h3>The field of Learning Analytics focuses on the use of intelligent data, learner-produced data and analysis models to discover information and social connections, and to predict and advise on learning. In the LinkedUp challenges we highly appreciate findings, aggregations, visualizations and other results that pave the way to novel tools that make use of open educational and general-purpose Web resources.</h3></p>
