--- a/usecases.html
+++ b/usecases.html
@@ -50,7 +50,7 @@
           <div class="titletext">
 		    <h1>The LinkedUp Challenge Use Cases</h1>
 			
-            <p><h2><em>Use cases developed by the LinkedUp project that can form as inspiration for participants to the LinkedUp challenge.</em></h3>
+            <p><h2><em>Real-world needs, scenarios and use cases to inspire you!</em></h3>
             <a href="http://www.europa.eu/"><img src="images/europa_logo.jpg" style="padding:25px" align="right"></a>
             <a href="http://www.ec.europa.eu/research/fp7"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"></a>
             <a href="http://linkedup-project.eu"><img src="images/project_logo.png" style="padding:25px;" align="right"></a>
@@ -63,7 +63,7 @@
         </div><!-- .block -->
 
         <div id="what" name="what" class="block">
-            <p><h3>Below you find suggestions of large-scale scenarios and use cases for the deployment, evaluation and exploitation of challenge submissions. The use cases came from consultation among LinkedUp project members and associated partners.</p></h3>
+            <p><h3>Below you find large-scale scenarios and use cases for the deployment, evaluation and exploitation of challenge submissions. The use cases came from consultation among LinkedUp project members and associated partners.</p></h3>
               
 			<p><h3>They present actual, real-life challenges that the related institutions are facing and addressing.</p></h3>
 	
@@ -95,7 +95,7 @@
 			  </ul></h3></p>
 
 			  <h2>Data sets</h2>
-              <p><h3>The data sets analyzed in this use case are comprised of learner inputs on OERs posted to YouTube and Facebook in the form of ratings, likes and comments. These inputs can be parsed and aggregated to establish a measure of value for each resource and its utility for learners. The educational resources will be provided via http://doer.col.org. Subject matter will be full courses at UG level in areas of physical sciences, engineering and technology.</h3></p>
+              <p><h3>The data sets analyzed in this use case are comprised of learner inputs on OERs posted to YouTube and Facebook in the form of ratings, likes and comments. These inputs can be parsed and aggregated to establish a measure of value for each resource and its utility for learners. The educational resources will be provided via the <a href="http://doer.col.org" target="_blank">Directory of Open Educational Resources</a>. Subject matter will be full courses at UG level in areas of physical sciences, engineering and technology.</h3></p>
 			  
 			  <h2>Solutions</h2>
               <p><h3>We invite applicants to submit prototypes addressing extraction and usage of information from social media, such as mash-ups to<br />
