Use case fixes suggested by Elisabetta

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		    <p><h3>Do you have any questions or comments? Do you know great open data sets that are relevant for education? We would love to hear from you!</p>
 			<ul>
 			  <li>Follow us on <a href="http://twitter.com/linkedupproject" target="_blank">@linkedupproject</a></li>
-			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailing nlist</a></li>
+			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailing list</a></li>
 			  <li><a href="http://linkedup-project.eu/contact/" target="_blank">Contact us directly</a></li>
 			</ul></h3>
 			<br/><br/>
