added images to use cases page

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <p><h3><ul>
 			    <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
 				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
-				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published 13 May 2013.</li>
+				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published in May.</li>
 				<li>Write an abstract of about 200 words describing your application and its goals. This abstract that will be published on the LinkedUp website.</li>
 				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
 			  </ul></h3></p>
