Better ordering and updated dates

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
         <li><a href="#first">Join now!</a></li>
-        <li><a href="#why">Why participate?</a></li>
         <li><a href="#how">How to participate?</a></li>
-        <li><a href="#support">Data and support</a></li>
+		<li><a href="#why">Why participate?</a></li>
+		<li><a href="#support">Data and support</a></li>
         <li><a href="#next">Review Process</a></li>
         <li><a href="#contact">Get in touch!</a></li>
         <li><a href="#background">Background</a></li>
@@ -107,14 +107,28 @@
 
 			  <h3><p>Important dates for the Veni Competition:
 			  <ul>
-			  <li>15 March 2013: Launch of the Challenge</li>
-			  <li>13 May 2013: Final release of the comprehensive LinkedUp dataset</li>
+			  <li>March 2013: Launch of the Challenge</li>
+			  <li>May 2013: Final release of the comprehensive LinkedUp dataset</li>
 			  <li>27 June 2013: Submission deadline</li>
 			  <li>16 August 2013: Notifications and nominations</li>
 			  <li>17 September 2013: Presentations and award ceremony</li>
 			  </ul></p></h3>
 	        <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
           </div>
+		  
+		  <div id="how" name="how" class="block">
+              <h1>How to participate</h1>
+              <br/>
+              <p><h3><ul>
+				  <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
+				  <li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
+				  <li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published in May.</li>
+				  <li>Write an abstract of about 200 words describing your application and its goals. This abstract will be published on the LinkedUp website after acceptance.</li>
+				  <li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
+			  </ul></h3></p>
+              <br/><br/>
+			  <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
+		  </div>
 		  
           <div id="why" name="why" class="block">
               <h1>Why participate?</h1>
@@ -141,19 +155,6 @@
 	        <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
         </div>
 
-
-        <div id="how" name="how" class="block">
-              <h1>How to participate</h1>
-              <br/>
-              <p><h3><ul>
-			    <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
-				<li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
-				<li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published in May.</li>
-				<li>Write an abstract of about 200 words describing your application and its goals. This abstract will be published on the LinkedUp website after acceptance.</li>
-				<li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
-			  </ul></h3></p>
-              <br/><br/>
-		</div>
 
         <div id="support" name="support" class="block">
               <h1>Data and development support</h1>
