Updated contact details and added form for visitors to fill in

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 				  <li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published in May.</li>
 				  <li>Write an abstract of about 200 words describing your application and its goals. This abstract will be published on the LinkedUp website after acceptance.</li>
 				  <li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
+				  <li>The submission form will launch in April. Please <a href="#contact">stay tuned</a> and <a href="https://docs.google.com/a/okfn.org/forms/d/1DAK4dM5ET-OopQVx105MJJdPXC_bTfESM8SsDvFe0dE/viewform" target="_blank">register your interest</a> in the meantime.</li> 
 			  </ul></h3></p>
               <br/><br/>
 			  <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
@@ -216,15 +217,22 @@
           <div id="contact" name="contact" class="block">
 		    <h1>Get in touch!</h1>
 		    </br></br>
-		    <p>
 		    <p><h3>Do you have any questions or comments? Do you know great open data sets that are relevant for education? We would love to hear from you!</p>
 			<ul>
 			  <li>Follow us on <a href="http://twitter.com/linkedupproject" target="_blank">@linkedupproject</a></li>
 			  <li>Subscribe to our <a href="https://www.l3s.de/mailman/listinfo/linkedup-public" target="_blank">public mailing list</a></li>
-			  <li><a href="http://linkedup-project.eu/contact/" target="_blank">Contact us directly</a></li>
+			  <li><a href="https://docs.google.com/a/okfn.org/forms/d/1DAK4dM5ET-OopQVx105MJJdPXC_bTfESM8SsDvFe0dE/viewform" target="_blank">Register your interest</a></li>
+			  <li><a href="mailto:contact@linkedup-challenge.org" target="_blank">Contact us via email</a></li>
 			</ul></h3>
-			<br/><br/>
-		  
+			  <p><h3>The LinkedUp Challenge team is represented by:<br />
+				  <br />
+				  <ul>
+					  <li><a href="https://twitter.com/stefandietze" target="_blank">Stefan Dietze</a> (Project Coordinator)</li>
+					  <li><a href="https://twitter.com/eelcoherder" target="_blank">Eelco Herder</a> (Challenge Coordinator)</li>
+					  <li><a href="https://twitter.com/mdaquin" target="_blank">Mathieu d'Aquin</a> (Data Coordinator)</li>
+					  <li><a href="https://twitter.com/sandervdwaal" target="_blank">Sander van der Waal</a> (Publicity Chair)</li>
+				  </ul></h3></p>	
+			  
           </div>
 
 		  <div id="background" name="background" class="block">
