Updated okcon as the ceremony event

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			  <li>May 2013: Final release of the comprehensive LinkedUp dataset</li>
 			  <li>27 June 2013: Submission deadline</li>
 			  <li>16 August 2013: Notifications and nominations</li>
-			  <li>17 September 2013: Presentations and award ceremony</li>
+			  <li>17 September 2013: Presentations and award ceremony at <a href="http://okcon.org" target="_blank">OKCon</a> in Geneva.</li>
 			  </ul></p></h3>
 	        <h4 style="text-align:right"><em>Questions or comments? <a href="#contact">Get in touch!</a></em></h4>
           </div>
@@ -146,7 +146,7 @@
 			  <br />
 			  <br />
 			  <ul>
-			  <li><strong>Showcase</strong> your ideas and solutions to the key community of researchers and practitioners in the educational field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at the OKF Festival.</li>
+			  <li><strong>Showcase</strong> your ideas and solutions to the key community of researchers and practitioners in the educational field. The competition committee consists of well-known people from industry and academia. The accepted submissions and demos will be widely disseminated. Last but not least the results will be presented at <a href="http://okcon.org" target="_blank">OKCon</a>.</li>
 			  <li><strong>Establish contact</strong> with a network of professional major organisations. Draw attention to your services, products, company or research activities with your submission by participating in the growing LinkedUp community.</li>
 			  <li>Deploy and evaluate your applications in <strong>real-world settings</strong>. LinkedUp offers a set of challenging use cases from real world large organizations, and stakeholders from e-learning (Commonwealth of Learning), publishing (Elsevier) and edutainment (Jake Berger, BBC). Your submission could provide them with solutions that they need.</li>
 			  <li>Work with a <strong>large amount of linked datasets</strong>, collected and provided by LinkedUp. The LinkedUp dataset provides a convenient starting point for exploring well-described educational and non-educational data on the Web.</li>
@@ -180,7 +180,7 @@
 			<br/><br/>
             <p><h3>After the submission deadline, all eligible submissions will be evaluated and rated by the review committee.</h3></p>
             <p><h3>Review and rating criteria include data quality, innovative aspects, performance, usability, intended audience and (the lack of) privacy issues.</h3></p>
-            <p><h3>During the presentation and award event in September, the audience will vote the winners from the submissions that received the highest review ratings.</h3></p>
+            <p><h3>During the presentation and award event at <a href="http://okcon.org" target="_blank">OKCon</a> in September, the audience will vote the winners from the submissions that received the highest review ratings.</h3></p>
 		</div>
 		
         <div id="judges" name="judges" class="block">
