Updating submission section to remove contradicting statements. :)

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <p><h3><ul>
 				  <li>Create a <strong>demo, prototype or application</strong> that analyses and/or makes use of linked data for any kind of online learning.</li>
 				  <li>In your application, you <strong>use data sets</strong> from the LinkedUp data repository and/or data from other sources.</li>
-				  <li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form, which will be published in May.</li>
+				  <li>Provide information about your application in several evaluation criteria, such as intended audience and the usability of your application. This will be asked on the submission form.</li>
 				  <li>Write an abstract of about 200 words describing your application and its goals. This abstract will be published on the LinkedUp website after acceptance.</li>
 				  <li>The demo should be available to the review panel. A publicly available demo or even open source code would be a plus, but is not required.</li>
 				  <li>The submission form will launch in April. Please <a href="#contact">stay tuned</a> and <a href="https://docs.google.com/a/okfn.org/forms/d/1DAK4dM5ET-OopQVx105MJJdPXC_bTfESM8SsDvFe0dE/viewform" target="_blank">register your interest</a> in the meantime.</li> 
@@ -231,6 +231,7 @@
 					  <li><a href="https://twitter.com/eelcoherder" target="_blank">Eelco Herder</a> (Challenge Coordinator)</li>
 					  <li><a href="https://twitter.com/mdaquin" target="_blank">Mathieu d'Aquin</a> (Data Coordinator)</li>
 					  <li><a href="https://twitter.com/sandervdwaal" target="_blank">Sander van der Waal</a> (Publicity Chair)</li>
+					  <li><a href="https://twitter.com/mlbrook" target="_blank">Michelle Brook</a> (Awesome Community Coordinator)</li>
 				  </ul></h3></p>	
 			  
           </div>
