--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" version="-//W3C//DTD XHTML 1.1//EN" xml:lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Capriola" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   <link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" />
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
 
   <!--[if IE 7]>
   	<link rel="stylesheet" type="text/css" href="ie7.css">
@@ -14,6 +16,7 @@
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/thickbox.js"></script>
+<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
   <title>LinkedUp Challenge</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
@@ -21,9 +24,9 @@
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrollto.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrolllocal.js" type="text/javascript" charset="utf-8"></script>
-
+  	
   <script type="text/javascript" >
-  Cufon.replace('h1')('h2')('h3')('h4')('h5');
+  //Cufon.replace('h1')('h2')('h3')('h4')('h5');
   $(document).ready( function() {
     $.localScroll();
   });
@@ -34,9 +37,22 @@
 </head>
 
 <body>
-  <div id="wrapper">
-    <div id="content" class="clearfix">
-      <ul id="navigation">
+  <div id="wrapper" class="container">
+	 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	   <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  </a>
+	  <div id="content" class="clearfix">
+ 	  <div class="nav-collapse">
+		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
         <li><a href="#first">Join now!</a></li>
@@ -48,16 +64,17 @@
         <li><a href="#background">Background</a></li>
 		<li><a href="usecases.html">Use cases</a></li></h3>
       </ul>
+	</div>
       
       <div class="content-shifter">
         <div id="toptitle" name="top" class="block">
           <div class="titletext">
 		    <h1>The LinkedUp Challenge</h1>
 			
-            <p><h2><em>A series of three competitions promoting the innovative use of linked and open data in an educational context.</em></h3>
-            <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"></a>
-            <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"></a>
-            <a href="http://linkedup-project.eu" target="_blank"><img src="images/project_logo.png" style="padding:25px;" align="right"></a>
+            <p><h2>A series of three competitions promoting the innovative use of linked and open data in an educational context.</h2>
+            <a href="http://www.europa.eu/" target="_blank"><img src="images/europa_logo.jpg" style="padding:25px" align="right"/></a>
+            <a href="http://www.ec.europa.eu/research/fp7" target="_blank"><img src="images/fp7_logo.gif" style="padding:25px;" align="right"/></a>
+            <a href="http://linkedup-project.eu" target="_blank"><img src="images/project_logo.png" style="padding:25px;" align="right"/></a>
             <p></p>
 	
             </p>
@@ -86,12 +103,12 @@
           </div><!-- .block -->
 
           <div id="organisers" name="organisers" class="block">
-		    <a href="http://www.exact-learning.com/en/home" target="_blank"><img src="images/exact.png" height="45px" style="padding:10px" align="right"></a>
-            <a href="http://ou.nl/" target="_blank"><img src="images/ounl.png" height="35px" style="padding:10px" align="right"></a>
-            <a href="http://www.open.ac.uk/" target="_blank"><img src="images/ou.png" height="50px" style="padding:10px" align="right"></a>
-            <a href="http://www.l3s.de/" target="_blank"><img src="images/luh.png" height="30px" style="padding:10px" align="right"></a>
-            <a href="http://www.elsevier.com" target="_blank"><img src="images/elsevier.png" height="50px" style="padding:10px" align="right"></a>
-            <a href="http://www.okfn.org/" target="_blank"><img src="images/okf.png" height="35px" style="padding:0px"  align="right"></a>
+		    <a href="http://www.exact-learning.com/en/home" target="_blank"><img src="images/exact.png" height="45px" style="padding:10px" align="right"/></a>
+            <a href="http://ou.nl/" target="_blank"><img src="images/ounl.png" height="35px" style="padding:10px" align="right"/></a>
+            <a href="http://www.open.ac.uk/" target="_blank"><img src="images/ou.png" height="50px" style="padding:10px" align="right"/></a>
+            <a href="http://www.l3s.de/" target="_blank"><img src="images/luh.png" height="30px" style="padding:10px" align="right"/></a>
+            <a href="http://www.elsevier.com" target="_blank"><img src="images/elsevier.png" height="50px" style="padding:10px" align="right"/></a>
+            <a href="http://www.okfn.org/" target="_blank"><img src="images/okf.png" height="35px" style="padding:0px"  align="right"/></a>
 			<br clear="all"/>
 			<br clear="all"/>
 			<br clear="all"/>
