--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" version="-//W3C//DTD XHTML 1.1//EN" xml:lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Capriola" />
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Capriola" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   <link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" />
