--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   <link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" />
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+  <!--link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"-->
 
   <!--[if IE 7]>
   	<link rel="stylesheet" type="text/css" href="ie7.css">
