Fix layout for smaller screens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  <span class="icon-bar"></span>
 	  <span class="icon-bar"></span>
 	  </a>
-	  <div id="content" class="clearfix">
+	  <div id="content">
  	  <div class="nav-collapse">
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
