--- a/usecases.html
+++ b/usecases.html
@@ -4,9 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" version="-//W3C//DTD XHTML 1.1//EN" xml:lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Capriola" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   <link rel="stylesheet" href="css/thickbox.css" type="text/css" media="screen" />
+  <!--link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet"-->
 
   <!--[if IE 7]>
   	<link rel="stylesheet" type="text/css" href="ie7.css">
@@ -14,6 +16,7 @@
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/thickbox.js"></script>
+<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
   <title>LinkedUp Challenge</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
@@ -21,9 +24,9 @@
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrollto.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/scrolllocal.js" type="text/javascript" charset="utf-8"></script>
-
+  	
   <script type="text/javascript" >
-  Cufon.replace('h1')('h2')('h3')('h4')('h5');
+  //Cufon.replace('h1')('h2')('h3')('h4')('h5');
   $(document).ready( function() {
     $.localScroll();
   });
@@ -36,7 +39,7 @@
 <body>
   <div id="wrapper">
     <div id="content" class="clearfix">
-      <ul id="navigation">
+      <ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
 		<li><a href="#what">What is this?</a></li>
         <li><a href="#teachinggoingsocial">Teaching going social</a></li>
