--- a/staging.html
+++ b/staging.html
@@ -55,13 +55,11 @@
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
         <li><a href="#what">What is it?</a></li>
-        <li><a href="#first">Join now!</a></li>
-        <li><a href="#how">How to participate?</a></li>
+        <li><a href="#first">Veni competition</a></li>
+        <li><a href="#how">How to enter</a></li>
 		<li><a href="#support">Data and support</a></li>
 		<li><a href="#faq">Frequently Asked Questions</a></li>
-        <li><a href="#next">Review Process</a></li>
         <li><a href="#contact">Get in touch!</a></li>
-        <li><a href="#background">Background</a></li>
 		<li><a href="#usecases">Use cases</a></li></h3>
       </ul>
 	</div>
