Changed to developer blog

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 			  <h2>What support is there?</h2>
 
-              <p><h3>The LinkedUp team have set up a <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/">developers blogs</a> and will be posting 'cooking recipes' and 'how to guides'. We’re also providing technical support on your code, so please <a href="mailto:contact@linkedup-challenge.org">email us</a> with any questions you have.  </h3></p>
+              <p><h3>The LinkedUp team have set up a <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/">developer blog</a> and will be posting 'cooking recipes' and 'how to guides'. We’re also providing technical support on your code, so please <a href="mailto:contact@linkedup-challenge.org">email us</a> with any questions you have.  </h3></p>
 
 			  <h2>Who is judging the entries?</h2>
 
@@ -203,7 +203,7 @@
 
               <p><h3>Linked data refers to data that has been published in a structured way so that it can be easily interlinked and become more useful. <a target="_blank" href="http://opendefinition.org/okd/">Open data</a> is data that can be freely used, reused and redistributed by anyone – subject only, at most, to the requirement to attribute and sharealike. Ideally we’d like you to use linked open data for your prototypes, but as there isn’t much linked open data about yet, we are happy for you to use any data that is openly available.</h3></p>
 
-              <p><h3>Want some tips on how to work with linked data? See our <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/?p=840">developers blog</a></h3></p>
+              <p><h3>Want some tips on how to work with linked data? See our <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/?p=840">developer blog</a></h3></p>
 
 
 			  <h2>What is the LinkedUp Project?</h2>
