--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			  <p align="center"><a class="btn btn-large btn-success" href="http://data.linkededucation.org/linkedup/catalog/browse/">Browse The Data</a></p>
 			  <br />
 			  
-              <p><h3>We don’t want you to feel limited by the datasets we've catalogued. Your application can use any open and/or linked data!</h3></p>
+              <p><h3>We don’t want you to feel limited by the datasets we've catalogued. Your application can use any open and/or linked data! For example, you can use the wealth of cultural resources from <a target="_blank" href="http://www.europeana.eu">Europeana</a>, which is available both as <a target="_blank" href="http://pro.europeana.eu/linked-open-data">Linked data</a> and via a <a target="_blank" href="http://www.europeana.eu/portal/api-introduction.html">REST API</a>.</h3></p>
 			  
               <p><h3>By joining the Challenge you will benefit from <strong>dedicated support and guidance</strong> offered by the LinkedUp team. We are providing how-to's, examples and code recipes to all participants, and have a designated <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/">developer blog</a>. Contact us via <a href="mailto:contact@linkedup-challenge.org">email</a> with specific questions, or to even submit your code for technical support!</h3></p>
 		</div>
